@@ -1,3 +1,11 @@
+2007-06-14  Ronaldo Maia  <romaia@async.com.br>
+
+	reviewed by: Johan Dahlin  <jdahlin@async.com.br>
+
+	* examples/validation/personalinformation.glade:
+	* examples/validation/personalinformation.py: Add a currency widget
+	* kiwi/ui/widgets/label.py: Set alignment according to the datatype.
+
 2007-06-09  Gustavo J. A. M. Carneiro  <gjc@gnome.org>
 
 	* tests/test_tasklet.py: Disable the emission hook test if
